# v1Beta1_gRPC_API

./: CMakeLists.txt  README.md
AudioSyncRequest/: audio_file.flac
BasicSyncRequest/: README.md
StreamingRequest/: cloud_speech.proto
source/StreamRequest/: main.cc
src/AudioSyncRequest/: README.md  main.cc
src/BasicSyncRequest/: Makefile  cloud_speech.proto  main.cc
src/StreamingRequest/: Makefile  README.md  main.cc
src/SyncRequest/: CONFIG  main.cc
src/SyncRequest_/: shitters.flac
src/streaming/: Makefile  README.md  streaming.cpp  streaming.hpp.in
